# thetree

./: README  Slicing.py  function_library.py  slice.py
external_scripts/: Slicing.py
vectorio/: Vectorio.py  ursina_demo.py
vectoriopp/: CMakeLists.txt  ColoredTriangles.cpp  ColoredTriangles.h  DensityField.cpp  DensityField.h  DensityGrid.cpp  DensityGrid.h  DensityViz.cpp  DensityViz.h  Field.cpp  Field.h  LineController.cpp  LineController.h  LineField.cpp  LineFragmentShader.fragmentshader  LineRenderer.cpp  LineRenderer.h  Makefile  MouseHandler.cpp  MouseHandler.h  Particle.fragmentshader  Particle.vertexshader  ParticleSystem.cpp  ParticleSystem.h  SimpleFragmentShader.fragmentshader  SketchField.cpp  SketchField.h  TunableParameters.h  Vectorio.cpp  Vectorio.h  VectorioConfiguration.h  VectorioXR.cpp  VectorioXR.h  main.cpp  vectorio  vectoriodbg
vectoriopp/glfwmain/: MouseHandler.cpp  main.cpp
vectoriopp/helpers/: controls.cpp  controls.hpp
vectoriopp/openxr/: CMakeLists.txt  LineFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  main.c
